# organizer-py

./: README.md  app.py  config.py  config.toml  pyproject.toml  requirements.txt
src/: app.py  config.py  hotkeys.py  logging_utils.py  state.py  ui.py  window.py
