[project]
name = "organizer-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
packages = [{include = "organizer_py", "from" = "src"}]

[tool.poetry]
name = "organizer-py"
version = "0.1.0"
description = ""
authors = ["Vahor <me@vahor.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pynput = "^1.7.7"
toml = "^0.10.2"

[tool.poe.tasks.build]
cmd  = "poetry build"
help = "Build the project"

[tool.poe.tasks.install]
cmd  = "poetry install"
help = "Install the project"

[tool.poe.tasks.run]
cmd  = "poetry run python src/app.py"
help = "Run the project"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
